--- a/week2/day2.ipynb
+++ b/week2/day2.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "c44c5494-950d-4d2f-8d4f-b87b57c5b330",
    "metadata": {},
    "outputs": [],
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "337d5dfc-0181-4e3b-8ab9-e78e0c3f657b",
    "metadata": {},
    "outputs": [
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "id": "b16e6021-6dc4-4397-985a-6679d6c8ffd5",
    "metadata": {},
    "outputs": [],
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "id": "02ef9b69-ef31-427d-86d0-b8c799e1c1b1",
    "metadata": {},
    "outputs": [],
@@ -135,17 +135,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "id": "aef7d314-2b13-436b-b02d-8de3b72b193f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\"Today's date is October 23, 2023.\""
+       "\"Today's date is October 5, 2023.\""
       ]
      },
-     "execution_count": 11,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "id": "bc664b7a-c01d-4fea-a1de-ae22cdd5141a",
    "metadata": {},
    "outputs": [],
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "id": "083ea451-d3a0-4d13-b599-93ed49b975e4",
    "metadata": {},
    "outputs": [
@@ -195,7 +195,7 @@
        "'HELLO'"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "id": "08f1f15a-122e-4502-b112-6ee2817dda32",
    "metadata": {},
    "outputs": [
@@ -235,7 +235,7 @@
      "data": {
       "text/plain": []
      },
-     "execution_count": 14,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -243,11 +243,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Shout has been called with input HSohacpjapj\n",
-      "Shout has been called with input HSohacpjapj\n",
-      "Shout has been called with input HSohacpjapj\n",
-      "Created dataset file at: .gradio/flagged/dataset1.csv\n",
-      "Shout has been called with input hohoih\n"
+      "Shout has been called with input hellp\n"
      ]
     }
    ],
@@ -386,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "id": "3cc67b26-dd5f-406d-88f6-2306ee2950c0",
    "metadata": {},
    "outputs": [
@@ -394,7 +390,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "* Running on local URL:  http://127.0.0.1:7864\n",
+      "* Running on local URL:  http://127.0.0.1:7861\n",
       "\n",
       "To create a public link, set `share=True` in `launch()`.\n"
      ]
@@ -402,7 +398,7 @@
     {
      "data": {
       "text/html": [
-       "<div><iframe src=\"http://127.0.0.1:7864/\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
+       "<div><iframe src=\"http://127.0.0.1:7861/\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -415,7 +411,7 @@
      "data": {
       "text/plain": []
      },
-     "execution_count": 18,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -482,40 +478,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "af9a3262-e626-4e4b-80b0-aca152405e63",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "* Running on local URL:  http://127.0.0.1:7866\n",
-      "\n",
-      "To create a public link, set `share=True` in `launch()`.\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div><iframe src=\"http://127.0.0.1:7866/\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": []
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Let's use Markdown\n",
     "# Are you wondering why it makes any difference to set system_message when it's not referred to in the code below it?\n",
@@ -535,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 14,
    "id": "88c04ebf-0671-4fea-95c9-bc1565d4bb4f",
    "metadata": {},
    "outputs": [],
@@ -562,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 16,
    "id": "0bb1f789-ff11-4cba-ac67-11b815e29d09",
    "metadata": {},
    "outputs": [
@@ -570,7 +536,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "* Running on local URL:  http://127.0.0.1:7867\n",
+      "* Running on local URL:  http://127.0.0.1:7864\n",
       "\n",
       "To create a public link, set `share=True` in `launch()`.\n"
      ]
@@ -578,7 +544,7 @@
     {
      "data": {
       "text/html": [
-       "<div><iframe src=\"http://127.0.0.1:7867/\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
+       "<div><iframe src=\"http://127.0.0.1:7864/\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -591,7 +557,7 @@
      "data": {
       "text/plain": []
      },
-     "execution_count": 22,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -701,7 +667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 18,
    "id": "0087623a-4e31-470b-b2e6-d8d16fc7bcf5",
    "metadata": {},
    "outputs": [],
@@ -718,7 +684,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 19,
    "id": "8d8ce810-997c-4b6a-bc4f-1fc847ac8855",
    "metadata": {},
    "outputs": [
@@ -726,7 +692,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "* Running on local URL:  http://127.0.0.1:7869\n",
+      "* Running on local URL:  http://127.0.0.1:7865\n",
       "\n",
       "To create a public link, set `share=True` in `launch()`.\n"
      ]
@@ -734,7 +700,7 @@
     {
      "data": {
       "text/html": [
-       "<div><iframe src=\"http://127.0.0.1:7869/\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
+       "<div><iframe src=\"http://127.0.0.1:7865/\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -747,7 +713,7 @@
      "data": {
       "text/plain": []
      },
-     "execution_count": 26,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -794,7 +760,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "id": "1626eb2e-eee8-4183-bda5-1591b58ae3cf",
    "metadata": {},
    "outputs": [],
@@ -822,7 +788,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 21,
    "id": "c701ec17-ecd5-4000-9f68-34634c8ed49d",
    "metadata": {},
    "outputs": [],
@@ -835,7 +801,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 22,
    "id": "5def90e0-4343-4f58-9d4a-0e36e445efa4",
    "metadata": {},
    "outputs": [],
@@ -854,15 +820,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 24,
    "id": "66399365-5d67-4984-9d47-93ed26c0bd3d",
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages/gradio/utils.py:1017: UserWarning: Expected 3 arguments for function <function stream_brochure at 0x15d2bf9c0>, received 4.\n",
+      "  warnings.warn(\n",
+      "/Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages/gradio/utils.py:1025: UserWarning: Expected maximum 3 arguments for function <function stream_brochure at 0x15d2bf9c0>, received 4.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "* Running on local URL:  http://127.0.0.1:7860\n",
+      "* Running on local URL:  http://127.0.0.1:7867\n",
       "\n",
       "To create a public link, set `share=True` in `launch()`.\n"
      ]
@@ -870,7 +846,7 @@
     {
      "data": {
       "text/html": [
-       "<div><iframe src=\"http://127.0.0.1:7860/\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
+       "<div><iframe src=\"http://127.0.0.1:7867/\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -883,53 +859,9 @@
      "data": {
       "text/plain": []
      },
-     "execution_count": 9,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Traceback (most recent call last):\n",
-      "  File \"/Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages/gradio/queueing.py\", line 625, in process_events\n",
-      "    response = await route_utils.call_process_api(\n",
-      "               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages/gradio/route_utils.py\", line 322, in call_process_api\n",
-      "    output = await app.get_blocks().process_api(\n",
-      "             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages/gradio/blocks.py\", line 2042, in process_api\n",
-      "    result = await self.call_function(\n",
-      "             ^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages/gradio/blocks.py\", line 1601, in call_function\n",
-      "    prediction = await utils.async_iteration(iterator)\n",
-      "                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages/gradio/utils.py\", line 728, in async_iteration\n",
-      "    return await anext(iterator)\n",
-      "           ^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages/gradio/utils.py\", line 722, in __anext__\n",
-      "    return await anyio.to_thread.run_sync(\n",
-      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages/anyio/to_thread.py\", line 56, in run_sync\n",
-      "    return await get_async_backend().run_sync_in_worker_thread(\n",
-      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages/anyio/_backends/_asyncio.py\", line 2405, in run_sync_in_worker_thread\n",
-      "    return await future\n",
-      "           ^^^^^^^^^^^^\n",
-      "  File \"/Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages/anyio/_backends/_asyncio.py\", line 914, in run\n",
-      "    result = context.run(func, *args)\n",
-      "             ^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages/gradio/utils.py\", line 705, in run_sync_iterator_async\n",
-      "    return next(iterator)\n",
-      "           ^^^^^^^^^^^^^^\n",
-      "  File \"/Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages/gradio/utils.py\", line 866, in gen_wrapper\n",
-      "    response = next(iterator)\n",
-      "               ^^^^^^^^^^^^^^\n",
-      "  File \"/var/folders/jp/lj6x3d515f92pn0n_tm5wqzr0000gn/T/ipykernel_60499/3867731706.py\", line 5, in stream_brochure\n",
-      "    result = stream_gpt(prompt)\n",
-      "             ^^^^^^^^^^\n",
-      "NameError: name 'stream_gpt' is not defined\n"
-     ]
     }
    ],
    "source": [
