--- a/week2/day3.ipynb
+++ b/week2/day3.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "70e39cd8-ec79-4e3e-9c26-5659d42d0861",
    "metadata": {},
    "outputs": [],
@@ -25,10 +25,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "231605aa-fccb-447e-89cf-8b187444536a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "OpenAI API Key exists and begins sk-proj-\n",
+      "Anthropic API Key exists and begins sk-ant-\n",
+      "Google API Key exists and begins AIzaSyC1\n"
+     ]
+    }
+   ],
    "source": [
     "# Load environment variables in a file called .env\n",
     "# Print the key prefixes to help with any debugging\n",
@@ -56,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "6541d58e-2297-4de1-b1f7-77da1b98b8bb",
    "metadata": {},
    "outputs": [],
@@ -69,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "e16839b5-c03b-4d9d-add6-87a0f6f37575",
    "metadata": {},
    "outputs": [],
@@ -112,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "1eacc8a4-4b48-4358-9e06-ce0020041bc1",
    "metadata": {},
    "outputs": [],
@@ -125,7 +135,7 @@
     "\n",
     "    print(\"History is:\")\n",
     "    print(history)\n",
-    "    print(\"And messages is:\")\n",
+    "    print(\"And messages are:\")\n",
     "    print(messages)\n",
     "\n",
     "    stream = openai.chat.completions.create(model=MODEL, messages=messages, stream=True)\n",
@@ -146,17 +156,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "0866ca56-100a-44ab-8bd0-1568feaf6bf2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "* Running on local URL:  http://127.0.0.1:7879\n",
+      "\n",
+      "To create a public link, set `share=True` in `launch()`.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div><iframe src=\"http://127.0.0.1:7879/\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": []
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "History is:\n",
+      "[]\n",
+      "And messages are:\n",
+      "[{'role': 'system', 'content': 'You are a helpful assistant'}, {'role': 'user', 'content': 'what is the meaning of life?'}]\n",
+      "History is:\n",
+      "[]\n",
+      "And messages are:\n",
+      "[{'role': 'system', 'content': 'You are a helpful assistant'}, {'role': 'user', 'content': 'what is the meaning of life?'}]\n",
+      "History is:\n",
+      "[]\n",
+      "And messages are:\n",
+      "[{'role': 'system', 'content': 'You are a helpful assistant'}, {'role': 'user', 'content': 'what is 2 +2 but be sarcastic'}]\n",
+      "History is:\n",
+      "[{'role': 'user', 'metadata': {'title': None, 'id': None, 'parent_id': None, 'duration': None, 'status': None}, 'content': 'what is 2 +2 but be sarcastic', 'options': None}, {'role': 'assistant', 'metadata': {'title': None, 'id': None, 'parent_id': None, 'duration': None, 'status': None}, 'content': \"Oh wow, this is such a tough question! Let me think... I guess it's probably, what, like 22? Just kidding—it's obviously 4! Shocking, right?\", 'options': None}]\n",
+      "And messages are:\n",
+      "[{'role': 'system', 'content': 'You are a helpful assistant'}, {'role': 'user', 'metadata': {'title': None, 'id': None, 'parent_id': None, 'duration': None, 'status': None}, 'content': 'what is 2 +2 but be sarcastic', 'options': None}, {'role': 'assistant', 'metadata': {'title': None, 'id': None, 'parent_id': None, 'duration': None, 'status': None}, 'content': \"Oh wow, this is such a tough question! Let me think... I guess it's probably, what, like 22? Just kidding—it's obviously 4! Shocking, right?\", 'options': None}, {'role': 'user', 'content': 'and 3+3?'}]\n"
+     ]
+    }
+   ],
    "source": [
     "gr.ChatInterface(fn=chat, type=\"messages\").launch()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "1f91b414-8bab-472d-b9c9-3fa51259bdfe",
    "metadata": {},
    "outputs": [],
@@ -164,13 +226,13 @@
     "system_message = \"You are a helpful assistant in a clothes store. You should try to gently encourage \\\n",
     "the customer to try items that are on sale. Hats are 60% off, and most other items are 50% off. \\\n",
     "For example, if the customer says 'I'm looking to buy a hat', \\\n",
-    "you could reply something like, 'Wonderful - we have lots of hats - including several that are part of our sales evemt.'\\\n",
+    "you could reply something like, 'Wonderful - we have lots of hats - including several that are part of our sales event.'\\\n",
     "Encourage the customer to buy hats if they are unsure what to get.\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "4e5be3ec-c26c-42bc-ac16-c39d369883f6",
    "metadata": {},
    "outputs": [],
@@ -188,17 +250,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "413e9e4e-7836-43ac-a0c3-e1ab5ed6b136",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "* Running on local URL:  http://127.0.0.1:7880\n",
+      "\n",
+      "To create a public link, set `share=True` in `launch()`.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div><iframe src=\"http://127.0.0.1:7880/\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": []
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "gr.ChatInterface(fn=chat, type=\"messages\").launch()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "d75f0ffa-55c8-4152-b451-945021676837",
    "metadata": {},
    "outputs": [],
@@ -209,17 +301,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "c602a8dd-2df7-4eb7-b539-4e01865a6351",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "* Running on local URL:  http://127.0.0.1:7881\n",
+      "\n",
+      "To create a public link, set `share=True` in `launch()`.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div><iframe src=\"http://127.0.0.1:7881/\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": []
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "gr.ChatInterface(fn=chat, type=\"messages\").launch()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "0a987a66-1061-46d6-a83a-a30859dc88bf",
    "metadata": {},
    "outputs": [],
@@ -230,7 +352,7 @@
     "def chat(message, history):\n",
     "\n",
     "    relevant_system_message = system_message\n",
-    "    if 'belt' in message:\n",
+    "    if 'belt' in message:  # primative version of RAG - very rough and not robust code here!\n",
     "        relevant_system_message += \" The store does not sell belts; if you are asked for belts, be sure to point out other items on sale.\"\n",
     "    \n",
     "    messages = [{\"role\": \"system\", \"content\": relevant_system_message}] + history + [{\"role\": \"user\", \"content\": message}]\n",
@@ -245,10 +367,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "20570de2-eaad-42cc-a92c-c779d71b48b6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "* Running on local URL:  http://127.0.0.1:7882\n",
+      "\n",
+      "To create a public link, set `share=True` in `launch()`.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div><iframe src=\"http://127.0.0.1:7882/\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": []
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "gr.ChatInterface(fn=chat, type=\"messages\").launch()"
    ]
@@ -275,8 +427,116 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "6dfb9e21-df67-4c2b-b952-5e7e7961b03d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sale_info_dict = {\n",
+    "    'scarf': ' The store has a bonus offering on hats an scarves/shauls; if you are asked for scarves or shauls, be sure to point out that it is buy one get the cheaper one free on the combination.',\n",
+    "    'scarves': ' The store has a bonus offering on hats an scarves/shauls; if you are asked for scarves or shauls, be sure to point out that it is buy one get the cheaper one free on the combination.',\n",
+    "    'shaul': ' The store has a bonus offering on hats an scarves/shauls; if you are asked for scarves or shauls, be sure to point out that it is buy one get the cheaper one free on the combination.',\n",
+    "    \n",
+    "    'belt': ' The store does not sell belts; if you are asked for belts, be sure to point out other items on sale.'\n",
+    "    \n",
+    "}\n",
+    "# note correct spelling of shawl is not used and this means that users typing shawl do not get the bogof info!\n",
+    "# note the way this script works means that shaul will always be found if shauls is also typed so no need to add shauls to the dict!\n",
+    "\n",
+    "def chat(message, history):\n",
+    "\n",
+    "    relevant_system_message = system_message\n",
+    "    for item, extra_syst_message in sale_info_dict.items():\n",
+    "        if item in message.lower():  # primative version of RAG - very rough and not robust code here!\n",
+    "            print(item)\n",
+    "            relevant_system_message += extra_syst_message\n",
+    "    \n",
+    "    messages = [{\"role\": \"system\", \"content\": relevant_system_message}] + history + [{\"role\": \"user\", \"content\": message}]\n",
+    "\n",
+    "    stream = openai.chat.completions.create(model=MODEL, messages=messages, stream=True)\n",
+    "\n",
+    "    response = \"\"\n",
+    "    for chunk in stream:\n",
+    "        response += chunk.choices[0].delta.content or ''\n",
+    "        yield response"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "1c74f5ee-3264-4a4c-b3e2-d6c6669cb7c1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "scarf\n",
+      "scarves\n",
+      "shaul\n",
+      "shauls\n",
+      "belt\n",
+      "belts\n"
+     ]
+    }
+   ],
+   "source": [
+    "for item, extra_syst_message in sale_info_dict.items():\n",
+    "    print(item)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "dafb8d18-3c80-435b-8214-895c27b3b603",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "* Running on local URL:  http://127.0.0.1:7886\n",
+      "\n",
+      "To create a public link, set `share=True` in `launch()`.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div><iframe src=\"http://127.0.0.1:7886/\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": []
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "shaul\n",
+      "shauls\n"
+     ]
+    }
+   ],
+   "source": [
+    "gr.ChatInterface(fn=chat, type='messages').launch()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "51a6d3d2-fab8-4557-8c4d-57821f49bb4e",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -298,7 +558,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.11"
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
