--- a/week2/day4.ipynb
+++ b/week2/day4.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "8b50bbe2-c0b1-49c3-9a5c-1ba7efa2bcb4",
    "metadata": {},
    "outputs": [],
@@ -28,10 +28,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "747e8786-9da8-4342-b6c9-f5f69c2e22ae",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "OpenAI API Key exists and begins sk-proj-\n"
+     ]
+    }
+   ],
    "source": [
     "# Initialization\n",
     "\n",
@@ -54,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "0a521d84-d07c-49ab-a0df-d6451499ed97",
    "metadata": {},
    "outputs": [],
@@ -66,10 +74,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "61a2a15d-b559-4844-b377-6bd5cb4949f6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "* Running on local URL:  http://127.0.0.1:7887\n",
+      "\n",
+      "To create a public link, set `share=True` in `launch()`.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div><iframe src=\"http://127.0.0.1:7887/\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": []
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# This function looks rather simpler than the one from my video, because we're taking advantage of the latest Gradio updates\n",
     "\n",
@@ -99,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "0696acb1-0b05-4dc2-80d5-771be04f1fb2",
    "metadata": {},
    "outputs": [],
@@ -116,17 +154,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "80ca4e09-6287-4d3f-997d-fa6afbcf6c85",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tool get_ticket_price called for Berlin\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'$499'"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "get_ticket_price(\"Berlin\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "4afceded-7178-4c05-8fa6-9f2085e6a344",
    "metadata": {},
    "outputs": [],
@@ -152,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "bdca8679-935f-4e7f-97e6-e71a4d4f228c",
    "metadata": {},
    "outputs": [],
@@ -178,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "ce9b0744-9c78-408d-b9df-9f6fd9ed78cf",
    "metadata": {},
    "outputs": [],
@@ -187,19 +243,21 @@
     "    messages = [{\"role\": \"system\", \"content\": system_message}] + history + [{\"role\": \"user\", \"content\": message}]\n",
     "    response = openai.chat.completions.create(model=MODEL, messages=messages, tools=tools)\n",
     "\n",
+    "    # ai runs but stops with 'tool_calls' as finish reason when it is asking for the tool to be called before it can make it's answer to the user.\n",
     "    if response.choices[0].finish_reason==\"tool_calls\":\n",
-    "        message = response.choices[0].message\n",
-    "        response, city = handle_tool_call(message)\n",
-    "        messages.append(message)\n",
-    "        messages.append(response)\n",
-    "        response = openai.chat.completions.create(model=MODEL, messages=messages)\n",
+    "        message = response.choices[0].message # the message and context leading to the tool being requested\n",
+    "        response, city = handle_tool_call(message) # function (below) able to handle the prev defined tool being called\n",
+    "        # print((message, response))\n",
+    "        messages.append(message) # adding the needed info to the messages ready to rerun ai now with all the tool call info requested\n",
+    "        messages.append(response) # adding the tool call info requested\n",
+    "        response = openai.chat.completions.create(model=MODEL, messages=messages) #rerun\n",
     "    \n",
     "    return response.choices[0].message.content"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "b0992986-ea09-4912-a076-8e5603ee631f",
    "metadata": {},
    "outputs": [],
@@ -221,13 +279,280 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "f4be8a71-b19e-4c2f-80df-f59ff2661f14",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "* Running on local URL:  http://127.0.0.1:7889\n",
+      "\n",
+      "To create a public link, set `share=True` in `launch()`.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div><iframe src=\"http://127.0.0.1:7889/\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": []
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tool get_ticket_price called for Berlin\n",
+      "(ChatCompletionMessage(content=None, refusal=None, role='assistant', audio=None, function_call=None, tool_calls=[ChatCompletionMessageToolCall(id='call_fq4njq6QEZElql5vlnNoAfNw', function=Function(arguments='{\"destination_city\":\"Berlin\"}', name='get_ticket_price'), type='function')]), {'role': 'tool', 'content': '{\"destination_city\": \"Berlin\", \"price\": \"$499\"}', 'tool_call_id': 'call_fq4njq6QEZElql5vlnNoAfNw'})\n"
+     ]
+    }
+   ],
    "source": [
     "gr.ChatInterface(fn=chat, type=\"messages\").launch()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "33c14dfd-c27c-4163-be1c-f031d5627114",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def counter(item_to_count, phrase_count_within):\n",
+    "    '''\n",
+    "    counts the number of instances of the supplied item in the supplied phrase \n",
+    "    '''\n",
+    "    if item_to_count == 'words':\n",
+    "        # count the number of words\n",
+    "        return len(phrase_count_within.split(' '))\n",
+    "    else:\n",
+    "        # count specific phrase/word/char/s\n",
+    "        return phrase_count_within.count(item_to_count)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "798c6c5b-d09c-4222-96aa-db4714ebeefc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "counter('r','strawberry')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "005f1434-fa93-4a01-a6dc-a4aaf9f9d38f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "counter('words','strawberry')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "43ac8a71-8dd8-40c9-9b4b-05ebb5244d8a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "counter('words','many many words')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "3940a0b9-eca3-43ba-a88b-4c471ff6655a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# There's a particular dictionary structure that's required to describe our function:\n",
+    "\n",
+    "counter_function = {\n",
+    "    \"name\": \"counter\",\n",
+    "    \"description\": \"Get the count of the number of instances of the supplied item_to_count text within the supplied phrase_count_within . Call this whenever you need to know the number of letters within a string, \\\n",
+    "    for example when a customer asks 'How many 'r' are in strawberry' or 'how many words are in this sentence' for the latter, you will supply 'words' as the item_to_count, this is a special argument that forces \\\n",
+    "    the number of words to be counted instead of the instances of 'words' literrally!\",\n",
+    "    \"parameters\": {\n",
+    "        \"type\": \"object\",\n",
+    "        \"properties\": {\n",
+    "            \"item_to_count\": {\n",
+    "                \"type\": \"string\",\n",
+    "                \"description\": \"The text that needs to be searched for\",\n",
+    "            },\n",
+    "            \"phrase_count_within\": {\n",
+    "                \"type\": \"string\",\n",
+    "                \"description\": \"The text that is searched within\",\n",
+    "            },\n",
+    "        },\n",
+    "        \"required\": [\"item_to_count\", \"phrase_count_within\"],\n",
+    "        \"additionalProperties\": False\n",
+    "    }\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "dc24a47d-95d2-4481-a873-6e690ba71990",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# And this is included in a list of tools:\n",
+    "\n",
+    "tools2 = [{\"type\": \"function\", \"function\": counter_function}]\n",
+    "system_message2 = \"you are an assistant who answers in show courteous one liners.\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "1d73210d-e2c6-47d9-9d7c-a02afff473bd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def chat2(message, history):\n",
+    "    messages = [{\"role\": \"system\", \"content\": system_message}] + history + [{\"role\": \"user\", \"content\": message}]\n",
+    "    response = openai.chat.completions.create(model=MODEL, messages=messages, tools=tools2)\n",
+    "\n",
+    "    # ai runs but stops with 'tool_calls' as finish reason when it is asking for the tool to be called before it can make it's answer to the user.\n",
+    "    if response.choices[0].finish_reason==\"tool_calls\":\n",
+    "        message = response.choices[0].message # the message and context leading to the tool being requested\n",
+    "        response, item_to_count, phrase_count_within = handle_tool_call2(message) # function (below) able to handle the prev defined tool being called\n",
+    "        # print((message, response))\n",
+    "        messages.append(message) # adding the needed info to the messages ready to rerun ai now with all the tool call info requested\n",
+    "        messages.append(response) # adding the tool call info requested\n",
+    "        response = openai.chat.completions.create(model=MODEL, messages=messages) #rerun\n",
+    "    \n",
+    "    return response.choices[0].message.content"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "6ae68b5f-41c5-4af0-928c-f5e73c0a96f3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# We have to write that function handle_tool_call:\n",
+    "\n",
+    "def handle_tool_call2(message):\n",
+    "    tool_call = message.tool_calls[0]\n",
+    "    arguments = json.loads(tool_call.function.arguments)\n",
+    "    item_to_count = arguments.get('item_to_count')\n",
+    "    phrase_count_within = arguments.get('phrase_count_within')\n",
+    "    count = counter(item_to_count, phrase_count_within)\n",
+    "    response = {\n",
+    "        \"role\": \"tool\",\n",
+    "        \"content\": json.dumps({\"item_to_count\": item_to_count, \"phrase_count_within\": phrase_count_within, \"count\": count}),\n",
+    "        \"tool_call_id\": tool_call.id\n",
+    "    }\n",
+    "    print(response)\n",
+    "    return response, item_to_count, phrase_count_within"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "bcdb55a5-2fdb-49e6-8efa-308c62ecd26d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "* Running on local URL:  http://127.0.0.1:7895\n",
+      "\n",
+      "To create a public link, set `share=True` in `launch()`.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div><iframe src=\"http://127.0.0.1:7895/\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": []
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'role': 'tool', 'content': '{\"item_to_count\": \"words\", \"phrase_count_within\": \"how many words are in this sentence?\", \"count\": 7}', 'tool_call_id': 'call_WirVR7KBPHXaW5BvLQgtL0v6'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "gr.ChatInterface(fn=chat2, type=\"messages\").launch()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b81382b9-c364-4313-b116-e8eda1cf833a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -246,7 +571,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.11"
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
