--- a/week2/week2 EXERCISE.ipynb
+++ b/week2/week2 EXERCISE.ipynb
@@ -19,12 +19,19 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a07e7793-b8f5-44f4-aded-5562f633271a",
+   "cell_type": "markdown",
+   "id": "129765c0-9a0e-45cc-993d-f2582fcb769d",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# I will make: \n",
+    "1. Gradio web interface that has a record audio button that can be pressed and then stopped.\n",
+    "2. the audio will then be converted to text and appear in a chat bot window\n",
+    "3. the chat bot will respond in text to the screen\n",
+    "4. the response will be spoken\n",
+    "5. the chat can be continued and written text can also be provided.\n",
+    "\n",
+    "bonus for streaming content to the console."
+   ]
   }
  ],
  "metadata": {
@@ -43,7 +50,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.11"
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
